# Rockchip_trial

./: .gitignore  CMakeLists.txt  TODO_list.txt  need_to_install.txt  readme.txt  working_with_i2c.txt
000_Code_Portions/GPSTest/: reader.cpp
000_Code_Portions/OpenCVTest/: CMakeLists.txt  image_overlay  main.cpp
000_Code_Portions/PluginsTest/: CMakeLists.txt  main.cpp  plugin_interface.h
000_Code_Portions/PluginsTest/plugins/: CMakeLists.txt  plugin1.cpp  plugin2.cpp
000_Code_Portions/i2cTest/: APDS9930_test.c
000_Code_Portions/i2cTest/DMP_MPU6050/: CMakeLists.txt  main.cpp
000_Code_Portions/i2cTest/DMP_MPU6050/include/: MPU6050_6Axis_MotionApps20.h  MPU6050_Sensor.h  iIMUSensor.h
000_Code_Portions/i2cTest/DMP_MPU6050/src/: MPU6050_Sensor.cpp
000_temp/: bme280_test.c  read_text.cpp  reader  reader.cpp  writer  writer.cpp
00_Common_stuff/: CMakeLists.txt
00_Common_stuff/include/: CUUIDGenerator.h  base_daemon.h  ini_parser.h  random_UUID_generator.h  simple_lockfree_queue.h
00_Common_stuff/src/: CUUIDGenerator.cpp  base_daemon.cpp  ini_parser.cpp  random_UUID_generator.cpp
01_Periph_config_worker/: CMakeLists.txt  main.cpp
01_Periph_config_worker/include/: peripheral_settings.h  peripherals_settings_worker.h
01_Periph_config_worker/src/: peripherals_settings_worker.cpp
02_Ballistics_profiles_worker/: CMakeLists.txt  main.cpp
02_Ballistics_profiles_worker/include/: ballistics_config.h  ballistics_config_worker.h
02_Ballistics_profiles_worker/src/: ballistics_config_worker.cpp
03_User_profiles_worker/: CMakeLists.txt  main.cpp
03_User_profiles_worker/include/: profiles_config.h  profiles_config_worker.h
03_User_profiles_worker/src/: profiles_config.cpp  profiles_config_worker.cpp
04_Ballistic_service/: CMakeLists.txt  ballistic_daemon_tester  conf.ini  main.cpp  push_and_sub_client.cpp
04_Ballistic_service/include/: ballistic_daemon.h  json_working_stuff.h  roll_angle.h  solver_structs_and_consts.h  trajectory_solver_API.h  trajectory_solver_routines.h
04_Ballistic_service/src/: ballistic_daemon.cpp  json_working_stuff.cpp  roll_angle.cpp  trajectory_solver.cpp  trajectory_solver_routines.cpp
05_GPS_service/: CMakeLists.txt  conf.ini  main.cpp  push_and_sub_client.cpp
05_GPS_service/include/: GPS_daemon.h  GPS_worker.h
05_GPS_service/src/: GPS_daemon.cpp  GPS_worker.cpp
06_I2C_sensors_service/: CMakeLists.txt  conf.ini  main.cpp  sub_client.cpp
06_I2C_sensors_service/include/: APDS9930_Sensor.h  BME680_Sensor.h  I2C_daemon.h  iIMUSensor.h  iLightSensor.h  iMeteoSensor.h  iProximitySensor.h  imu_sensor_fabrique.h  light_sensor_fabrique.h  meteo_sensor_fabrique.h  proxy_sensor_fabrique.h
06_I2C_sensors_service/include/imu/: MPU6050_6Axis_MotionApps20.h  MPU6050_Sensor.h
06_I2C_sensors_service/include/imu/ICM20948/: ICM20948_Sensor.h  icm20948.h
06_I2C_sensors_service/include/imu/MPU6050/: I2Cdev.h
06_I2C_sensors_service/include/lux/: APDS9300_Sensor.h  APDS9930_Sensor.h  BH1750_Sensor.h  TSL2561_Sensor.h
06_I2C_sensors_service/include/meteo/: BME280_Sensor.h
06_I2C_sensors_service/include/proxy/: APDS9960_Sensor.h  MAX44009_Sensor.h  VCNL4040_Sensor.h
06_I2C_sensors_service/src/: APDS9300_Sensor.cpp  APDS9960_Sensor.cpp  BME280_Sensor.cpp  BME680_Sensor.cpp  I2C_daemon.cpp  VCNL4040_Sensor.cpp  imu_sensor_fabrique.cpp  light_sensor_fabrique.cpp  meteo_sensor_fabrique.cpp  proxy_sensor_fabrique.cpp
06_I2C_sensors_service/src/imu/ICM20948/: ICM20948_Sensor.cpp  ahrs_math.cpp  icm20948.cpp
06_I2C_sensors_service/src/imu/MPU6050/: MPU6050_Sensor.cpp
06_I2C_sensors_service/src/lux/: APDS9930_Sensor.cpp  BH1750_Sensor.cpp  TSL2561_Sensor.cpp
06_I2C_sensors_service/src/proxy/: MAX44009_Sensor.cpp
